# ChunkRecallTrainer

./: .env.example  .gitignore  Dockerfile  MANIFEST.ini  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  seed_sample.csv
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: python-tests.yml
.streamlit/: config.toml
src/chunk_recall_trainer/: auth.py  chunk.py  config.py  exercises.py  graph.py  logger.py  main.py  seed.py
tests/: conftest.py  test_auth.py  test_chunk.py  test_config.py  test_exercise.py  test_graph.py  test_sm2.py
